fix footer change on small screen size

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,3 +38,7 @@ a {
 input {
   outline: none;
 }
+
+.bigfooter {
+  visibility: hidden;
+}
